fix footer on mobile

--- a/source/css/partials/_footer.scss
+++ b/source/css/partials/_footer.scss
@@ -4,6 +4,7 @@ footer {
   color: white;
   font-family: 'Montserrat', sans-serif;
   line-height: 28px;
+  position: relative;
 
   .pull-left, .pull-right {
     padding: $base-spacing 0;
